--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,7 @@
         <p class="py-2">Welcome to the To-Do Manager</p>
         <p class="py-2">New User? <a href="/signup" class="text-green-600"> Sign-up now </a> </p>
         <p class="py-2">Existing User? <a href="/login" class="text-green-600">Sign-in</a></p>
-        <p style=" position: absolute; bottom: 0; left: 0; width: 100%; text-align: center; background-color: rgb(219, 93, 71);">Built by Vineeth</p>
+        <p style=" position: absolute; bottom: 0; left: 0; width: 100%; text-align: center; background-color: rgb(219, 93, 71);">Built by Shriya</p>
       </div>
     </div>
   </body>
